--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
             </li>
           </ul>
         </nav>
+        <div class="main-section__header__mobile">
+          <h1 class="main-section__header__farm-name">
+            <img
+              class="main-section__header__farm-name__logo"
+              src="./logo.png"
+              alt="logo"
+            />
+            OurBerries
+          </h1>
+          <div class="main-section__header__menu">
+            <span class="material-symbols-outlined">
+              menu
+              </span>
+          </div>
+        </div>
       </div>
       <div class="main-section__main">
         <div class="main-section__text">
