media query added!

--- a/index.html
+++ b/index.html
@@ -37,22 +37,25 @@
             </li>
           </ul>
         </nav>
-        <div class="main-section__header__mobile">
-          <h1 class="main-section__header__farm-name">
-            <img
-              class="main-section__header__farm-name__logo"
-              src="./logo.png"
-              alt="logo"
-            />
-            OurBerries
-          </h1>
-          <div class="main-section__header__menu">
-            <span class="material-symbols-outlined">
-              menu
-              </span>
-          </div>
-        </div>
       </div>
+      <!-- <div class="main-section__header__mobile">
+        <h1 class="main-section__header__farm-name">
+          <img
+            class="main-section__header__farm-name__logo"
+            src="./logo.png"
+            alt="logo"
+          />
+          OurBerries
+        </h1>
+
+        <nav class="main-section__header__nav-links">
+          <ul class="main-section__header__nav__list-items">
+            <li class="main-section__header__list-item list-iitem">
+            <span class="material-symbols-outlined"> menu </span>
+          </li>
+          </ul>
+        </nav>
+      </div> -->
       <div class="main-section__main">
         <div class="main-section__text">
           <h2 class="main-section__text__title">
@@ -110,18 +113,18 @@
             </h4>
           </li>
         </a>
-        <a href="#blackberry">
+        <a class="list-item" href="#">
           <li class="our-products__blackberries list-item">
             <img
               class="list-item__picture"
               src="./images/blackberry.png"
               alt="blackberry"
             />
-            <div class="list-item__coming-soon">COMING SOON!</div>
 
             <h4 class="our-products__list-items__title title">
               U-Pick Blackberry
             </h4>
+            <div class="list-item__coming-soon">COMING SOON!</div>
           </li>
         </a>
       </ul>
@@ -298,21 +301,27 @@
         </div>
       </div>
       <div class="footer__social-media">
-        <img
-          class="social-media-logo"
-          src="./images/facebook-logo.png"
-          alt="facebook-logo"
-        />
-        <img
-          class="social-media-logo"
-          src="./images/instagram-logo.png"
-          alt="facebook-logo"
-        />
-        <img
-          class="social-media-logo"
-          src="./images/twitter-logo.png"
-          alt="facebook-logo"
-        />
+        <a href="https://www.facebook.com/" target="_blank">
+          <img
+            class="social-media-logo"
+            src="./images/facebook-logo.png"
+            alt="facebook-logo"
+          />
+        </a>
+        <a href="https://www.instagram.com" target="_blank">
+          <img
+            class="social-media-logo"
+            src="./images/instagram-logo.png"
+            alt="facebook-logo"
+          />
+        </a>
+        <a href="https://www.twitter.com " target="_blank">
+          <img
+            class="social-media-logo"
+            src="./images/twitter-logo.png"
+            alt="facebook-logo"
+          />
+        </a>
       </div>
     </footer>
   </body>
