--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a href="#">About us</a>
             </li>
             <li class="main-section__header__list-item list-iitem">
-              <a href="#">Pick up berries!</a>
+              <a href="./pages/form.html">Pick up berries!</a>
             </li>
           </ul>
         </nav>
@@ -156,7 +156,9 @@
         <h4 class="about-the-product-item__subtitle">EARLY AGUST</h4>
         <p class="about-the-product-item__opening-hours">7 days a week</p>
         <p class="about-the-product-item__opening-hpurs">9am-5pm.</p>
+        <a href="./pages/form.html">
         <button class="book-now">BOOK NOW</button>
+      </a>
       </div>
 
       <div class="about-the-product-item text" id="blueberry">
@@ -178,7 +180,9 @@
         <h4 class="about-the-product-item__subtitle">EARLY OCTOBER</h4>
         <p class="about-the-product-item__opening-hours">7 days a week</p>
         <p class="about-the-product-item__opening-hpurs">9am - 5pm</p>
+        <a href="./pages/form.html">
         <button class="book-now">BOOK NOW</button>
+      </a>
       </div>
 
       <div class="about-the-product-item">
@@ -215,7 +219,9 @@
         <h4 class="about-the-product-item__subtitle">EARLY OCTOBER</h4>
         <p class="about-the-product-item__opening-hours">7 days a week</p>
         <p class="about-the-product-item__opening-hpurs">9am - 5pm</p>
+        <a href="./pages/form.html">
         <button class="book-now">BOOK NOW</button>
+      </a>
       </div>
     </section>
     <section class="testimonials">
@@ -282,7 +288,7 @@
 
           <li class="footer-item"><a href="#top">Home</a></li>
           <li class="footer-item"><a href="#">About us</a></li>
-          <li class="footer-item"><a href="#">Pick up berries</a></li>
+          <li class="footer-item"><a href="./pages/form.html">Pick up berries</a></li>
         </ul>
         <ul class="footer-items">
           <a class="footer-items__title" href="#our-berries">
