some more chhanges..!

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <div class="about-the-product-item">
         <img
           class="about-berry__picture"
-          src="./images/blueberry-farm.webp"
+          src="./images/blueberry-farm.jpg"
           alt="Blueberry in a farm"
         />
       </div>
@@ -196,7 +196,7 @@
       <div class="about-the-product-item">
         <img
           class="about-berry__picture"
-          src="./images/raspberry-farm.jpg"
+          src="./images/raspberry-farm1.jpg"
           alt="raspberry in a farm"
         />
       </div>
@@ -302,7 +302,6 @@
         <div class="footer__subscribe">
           <label for="email">Subscribe for lastest upadets!</label>
           <input id="email" type="email" placeholder="Enter your email" />
-
           <button class="subscribe__button">Subscribe</button>
         </div>
       </div>
