--- a/pages/thank-you.html
+++ b/pages/thank-you.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Thank you for choosing Ourberries!</h1>
+      <h1>Thank you for choosing OurBerries!</h1>
       <p>We will be in touch with you soon!</p>
       <a href="/index.html">Go back to home page.</a>
     </div>
