added about us page!

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a href="#our-products"> Our Products </a>
             </li>
             <li class="main-section__header__list-item list-iitem">
-              <a href="#">About us</a>
+              <a href="/pages/about-us.html">About us</a>
             </li>
             <li class="main-section__header__list-item list-iitem">
               <a href="./pages/form.html">Pick up berries!</a>
