--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -7,9 +7,9 @@
     <title>About-us</title>
     <link rel="stylesheet" href="/css/about-us.css" />
     <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-  />
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
   <body>
     <header class="header">
@@ -34,16 +34,12 @@
       </nav>
     </header>
     <main class="main">
-      <section class="main__section">
+      <section class="main__section1">
         <div class="text">
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus
             illum quisquam non, vitae ducimus consequatur sunt, neque beatae
             cumque perspiciatis pariatur deleniti cupiditate reiciendis quis.
-            Porro quam corrupti natus similique? Lorem ipsum dolor sit, amet
-            consectetur adipisicing elit. Asperiores corrupti dolores laboriosam
-            fugit distinctio iste error maiores porro odio, doloremque ex a
-            suscipit accusantium tenetur quidem laborum eum repudiandae odit.
           </p>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -52,12 +48,17 @@
             saepe!
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque voluptatem, architecto recusandae vitae modi odio vero adipisci quaerat delectus, unde optio molestias ipsam, aliquam harum sit illo pariatur? Aperiam quos eos suscipit veniam totam facilis minus commodi tempora odio minima! Praesentium in consectetur, quasi nulla dolore dicta facere similique recusandae possimus. Sunt repudiandae suscipit quos magnam explicabo possimus praesentium! Quisquam consequuntur facere dolorem quae optio eos ex officia asperiores quibusdam rem tempora quaerat in sapiente modi numquam, sint hic. Et nam laboriosam deserunt voluptatem nisi, odit facilis autem, optio rerum aut odio in eveniet quam iste corporis possimus, neque eaque?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+            voluptatem, architecto recusandae vitae modi odio vero adipisci
+            quaerat delectus, unde optio molestias ipsam, aliquam harum sit illo
+            pariatur? Aperiam quos eos suscipit veniam totam facilis minus
+            commodi tempora odio minima! Praesentium in consectetur, quasi nulla
+            dolore dicta facere similique recusandae possimus. <b>Sunt repudiandae.</b>
           </p>
         </div>
         <img src="/images/about-us1.jpg" alt="" />
       </section>
-      <section class="main__section">
+      <section class="main__section2">
         <img src="/images/about-us2.jpg" alt="" />
         <div class="text">
           <p>
@@ -65,9 +66,6 @@
             illum quisquam non, vitae ducimus consequatur sunt, neque beatae
             cumque perspiciatis pariatur deleniti cupiditate reiciendis quis.
             Porro quam corrupti natus similique? Lorem ipsum dolor sit, amet
-            consectetur adipisicing elit. Asperiores corrupti dolores laboriosam
-            fugit distinctio iste error maiores porro odio, doloremque ex a
-            suscipit accusantium tenetur quidem laborum eum repudiandae odit.
           </p>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -76,10 +74,14 @@
             saepe!
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque voluptatem, architecto recusandae vitae modi odio vero adipisci quaerat delectus, unde optio molestias ipsam, aliquam harum sit illo pariatur? Aperiam quos eos suscipit veniam totam facilis minus commodi tempora odio minima! Praesentium in consectetur, quasi nulla dolore dicta facere similique recusandae possimus. Sunt repudiandae suscipit quos magnam explicabo possimus praesentium! Quisquam consequuntur facere dolorem quae optio eos ex officia asperiores quibusdam rem tempora quaerat in sapiente modi numquam, sint hic. Et nam laboriosam deserunt voluptatem nisi, odit facilis autem, optio rerum aut odio in eveniet quam iste corporis possimus, neque eaque?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+            voluptatem, architecto recusandae vitae modi odio vero adipisci
+            dolore dicta facere similique recusandae possimus. Sunt repudiandae
+            suscipit quos magnam explicabo possimus praesentium! Quisquam
+            consequuntur facere dolorem quae optio eos ex officia asperiores
+            quibusdam rem tempora quaerat in sapiente modi numquam, sint hic. 
           </p>
         </div>
-       
       </section>
     </main>
     <footer class="footer">
